Сделанное ДЗ по теме Spring Data JPA.