@@ -1,5 +1,8 @@
 package ru.skypro.lessons.springboot.weblibrary.service;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 //import ru.skypro.lessons.springboot.weblibrary.dto.EmployeeDTO;
 import ru.skypro.lessons.springboot.weblibrary.dto.EmployeeDTO;
@@ -8,6 +11,7 @@ import ru.skypro.lessons.springboot.weblibrary.service.pojo.Employee;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,44 +23,17 @@ public class EmployeeServiceImpl implements EmployeeService {
         this.employeeRepository = employeeRepository;
     }
 
-//    public List<Employee> getAllEmployees() {
-//        return employeeRepository.getAllEmployees();
-//    }
-//
-//    public int getSumSalaryOfEmployees() {
-//        return (int) employeeRepository.getAllEmployees().stream().map(Employee::getSalary).mapToInt(Integer::valueOf).sum();
-//    }
-//    public OptionalInt getMinSalaryOfEmployees() {
-//        return employeeRepository.getAllEmployees().stream().map(Employee::getSalary).mapToInt(Integer::valueOf).min();
-//    }
-//    public OptionalInt getMaxSalaryOfEmployees() {
-//        return employeeRepository.getAllEmployees().stream().map(Employee::getSalary).mapToInt(Integer::valueOf).max();
-//    }
-    public List<EmployeeDTO> getHighSalariesOfEmployees() {
-        int averageSalary = (int) employeeRepository.getAllEmployees().stream().map(EmployeeDTO::getSalary).mapToInt(Integer::valueOf).average().getAsDouble();
+    public List<Employee> getAllEmployees() {
+        return employeeRepository.getAllEmployees();
+    }
+
+    public List<Employee> getHighSalariesOfEmployees() {
+        int averageSalary = (int) employeeRepository.getAllEmployees().stream().map(e -> e.getSalary()).mapToInt(Integer::valueOf).average().getAsDouble();
         return employeeRepository.getAllEmployees().stream().filter(e -> e.getSalary() > averageSalary).collect(Collectors.toList());
     }
 
 
-
     // Реализуем метод получения списка всех сотрудников
-    @Override
-    public List<EmployeeDTO> getAllEmployees() {
-        // Получаем список сотрудников из репозитория,
-        // Преобразуем их в DTO и собираем в список
-        return employeeRepository.findAllEmployees().stream()
-                .map(EmployeeDTO::fromEmployee)
-                .collect(Collectors.toList());
-    }
-
-
-//    public List<Employee> getAllEmployees() {
-//        List<Employee> result = new ArrayList<>();
-//        employeeRepository.findAll()
-//                .forEach(result::add);
-//        return result;
-//    }
-
 
     //методы до переделки
     @Override
@@ -84,35 +61,31 @@ public class EmployeeServiceImpl implements EmployeeService {
         return employeeRepository.findAllEmployeeFullInfo();
     }
 
-//    @Override
-//    public void addPosition(Position position) {
-//        employeeRepository.save(position);
-//    }
+    @Override
+    public List<EmployeeFullInfo> findAllEmployeeByPosition(String position) {
+            return employeeRepository.findAllEmployeeFullInfo().stream().filter(e -> e.getPositionName().equals(position)).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<EmployeeFullInfo> findAllEmployeeById(String position) {
+        return employeeRepository.findAllEmployeeFullInfo().stream().filter(e -> e.).collect(Collectors.toList());
+    }
+
     // методы до переделки
 
 
+    public List<Employee> getEmployeesWithSalaryHigherThan(int compareSalary) {
+        return employeeRepository.getAllEmployees().stream().filter(e -> e.getSalary() >  compareSalary).collect(Collectors.toList());
+    }
 
+    @Override
+    public List<Employee> getEmployeeWithPaging(int pageIndex, int unitPerPage) {
+        Pageable employeeOfConcretePage = PageRequest.of(pageIndex, unitPerPage);
+        //непонятно почему компилятор ругается на строчку, показанную ниже: он
+        //пишет, что должно быть "0" аргументов вместо "1" аргумента.
+        Page<Employee> page = employeeRepository.findAll(employeeOfConcretePage);
 
-
-//    @Override
-//    public void addPosition(Position position) {
-//        employeeRepository.save(position);
-//    }
-
-
-//
-//    public void editEmployee(Employee employee) {
-//        employeeRepository.editEmployee(employee);
-//    }
-//    public void deleteEmployee(long id) {
-//        Employee employee = getEmployeeById(id);
-//        employeeRepository.deleteEmployee(employee);
-//    }
-//    public Employee getEmployeeById(long id) {
-//        List<Employee> employees = employeeRepository.getAllEmployees();
-//        return employees.stream().filter(e -> e.getId() == id).findFirst().orElse(null);
-//    }
-//    public List<Employee> getEmployeesWithSalaryHigherThan(int compareSalary) {
-//        return employeeRepository.getAllEmployees().stream().filter(e -> e.getSalary() >  compareSalary).collect(Collectors.toList());
-//    }
+        return page.stream()
+                .toList();
+    }
 }
